<resources>
    <string name="app_name">MyApiTest - Raqueli Gonçalves</string>

    <string name="generical_error">Erro desconhecido, clique para tentar novamente.</string>
    <string name="no_items">Nenhum carro disponível.</string>
    <string name="required_field">Campo obrigatório</string>

    <string name="hint_cellphone">+55 11 912345678</string>
    <string name="code_brazil">+55</string>
    <string name="send_sms">Enviar SMS</string>
    <string name="hint_verify_sms">123456</string>
    <string name="verify_sms">Verificar SMS</string>
    <string name="menu_loggout">Sair</string>
    <string name="sms_sent">Código de verificação enviado via SMS</string>
    <string name="code_not_sent_yet">Envie o SMS antes de verificar o código.</string>
    <string name="invalid_phone_format">Número em formato incorreto, corrija e tente novamente.</string>
    <string name="login_title">Car Api</string>
    <string name="login_subtitle">Entrar com número de telefone</string>

    <string name="car_label_year">Ano: %1$s</string>
    <string name="car_label_licence">Placa: %1$s</string>

    <string name="location_permission_denied">Permissão de localização negada.</string>
    <string name="required_marker">Selecione um local no mapa.</string>
    <string name="required_photo">Tire uma foto do carro ou informe a URL da imagem.</string>
    <string name="image_captured">Imagem obtida</string>
    <string name="error_upload_image">Falha ao enviar imagem para o Firebase.</string>
    <string name="error_add_car">Erro ao adicionar o carro.</string>
    <string name="success_add_car">Carro adicionado com sucesso.</string>

    <string name="google_maps_key">AIzaSyAQnRUL6FqzZRel99rS1Ph1a5YtBII9IWQ</string>
    <string name="add_car">Adicionar carro</string>
    <string name="new_car_title">Novo carro</string>
    <string name="hint_car_name">Nome do carro</string>
    <string name="hint_car_year">Ano (2020/2020)</string>
    <string name="hint_car_licence">Placa</string>
    <string name="hint_car_image_url">URL da imagem</string>
    <string name="take_photo">Tirar foto</string>
    <string name="save_car">Salvar carro</string>
    <string name="select_location">Selecione o local no mapa</string>
    <string name="car_detail_title">Detalhes do carro</string>
    <string name="location_map_title">Localização</string>
    <string name="main_title">Car Api</string>
</resources>
